Fix clipping of Mastodon logo

--- a/css/style.scss
+++ b/css/style.scss
@@ -104,7 +104,7 @@ nav {
 
 .bio-mastodon {
     font-size: 1.2em;
-    background: no-repeat left/1.8em url("/img/mastodon_logo.png") ;
+    background: no-repeat left/1.5em url("/img/mastodon_logo.png") ;
     padding: 0.2em 0 0.2em 2em;
     text-decoration: none;
     color: $color-primary;
